--- a/express-starter-8.6.0/express-project-starter/.env.example
+++ b/express-starter-8.6.0/express-project-starter/.env.example
@@ -1,4 +1,5 @@
-DB_USERNAME=
+DB_USERNAME=<<db_username>>
 DB_PASSWORD=<<db_password>>
 DB_DATABASE=<<db_database>>
 DB_HOST=localhost
+sessionSecret=<<sessionSecret>>
