--- a/express-starter-8.6.0/express-project-starter/package.json
+++ b/express-starter-8.6.0/express-project-starter/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.0.4",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
